  * Replace perl snippet from libnss-sss.post* with sed, drop perl from
    Depends. (Closes: #686237)
  * libpam-sss.pam-auth-update*: Add a separate file for the password stack,
    and drop it from the main file. It needs to have a higher priority
    from the rest so that password changes work with pam_cracklib installed.
  * compat,rules: Bump compat to 9.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 24 May 2012 14:46:39 +0300

sssd (1.8.4-2) UNRELEASED; urgency=low

  * rules: Fix the current date format, and move the date mangling to
    happen before dh_install is run. (Closes: #670019)
  * sssd.{preinst,postrm}: Install the apparmor profile in force-complain
    mode on install, and remove the profile directory on purge (if empty). Also
    migrate from previous setup which installed it as disabled.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 05 Jun 2012 11:39:33 +0300

sssd (1.8.4-1) unstable; urgency=low

  * New upstream bugfix release 1.8.2.
    - Several fixes to case-insensitive domain functions
    - Fix for GSSAPI binds when the keytab contains unrelated
      principals
    - Fixed several segfaults
    - Workarounds added for LDAP servers with unreadable RootDSE
    - SSH knownhostproxy will no longer enter an infinite loop
      preventing login
    - The provided SYSV init script now starts SSSD earlier at startup
      and stops it later during shutdown
    - Assorted minor fixes for issues discovered by static analysis
      tools
  * New upstream bugfix release 1.8.3.
    - Numerous manpage and translation updates
    - LDAP: Handle situations where the RootDSE isn't available anonymously
    - LDAP: Fix regression for users using non-standard LDAP attributes for
      user information
  * New upstream bugfix release 1.8.4. (LP: #981125, #985031)
    - Fix a bug causing AD servers not to fail over properly when the KDC
      on the primary server is down
    - Fix an endianness bug on big-endian systems when looking up services